Fix text-image alignment in first column which is now done

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 ul {
     list-style-type: none;
     display: flex;
-    gap: 10px;
+    gap: 15px;
     padding-right: 80px;
 }
 
@@ -48,14 +48,14 @@ img {
     font-size: 48px;
     color: #F9FAF8;
     max-width: 500px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .sub-text {
     font-size: 18px;
     color: #E5E7EB;
     max-width: 550px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 button {
@@ -69,11 +69,12 @@ button {
 
 .divider {
     flex-wrap: wrap;
-    
+    vertical-align: middle;
 }
 
 .chicago {
-    width: 500px;
-    height: auto;
+    height: 199.5px;
+    width: auto;
     box-shadow: 2px 2px 6px 1px black;
+    vertical-align: middle;
 }
